--- a/templates/notes_generate.html
+++ b/templates/notes_generate.html
@@ -13,52 +13,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
 	<link rel="stylesheet" href="/static/css/notes_genarate.css">
 	<link rel="icon" href="/static/logo/music_note_white.png">
-	<script>
-		document.addEventListener("DOMContentLoaded", function () {
-			let defaultIndex = 1; // Mục mặc định
-			let defaultNavButton = document.querySelector(`.nav-button:nth-of-type(${defaultIndex})`);
-			let highlight = document.getElementById("nav-content-highlight");
-			
-			if (defaultNavButton) {
-				let defaultTop = defaultNavButton.offsetTop + "px";
-				highlight.style.top = defaultTop;
-				highlight.dataset.defaultTop = defaultTop; // Lưu vị trí mặc định
-				
-				// Đặt màu cho mục mặc định
-				defaultNavButton.classList.add("active");
-				defaultNavButton.style.color = "var(--navbar-dark-primary)";
-			}
-			
-			document.querySelectorAll(".nav-button").forEach((button) => {
-				button.addEventListener("mouseenter", function () {
-					highlight.style.top = button.offsetTop + "px";
-					resetColors();
-					
-					if (button !== defaultNavButton) {
-						button.style.color = "var(--navbar-dark-primary)"; // Mục được hover
-						defaultNavButton.style.color = "var(--navbar-light-secondary)"; // Đổi màu mặc định
-					}
-				});
-				
-				button.addEventListener("mouseleave", function () {
-					resetColors();
-					highlight.style.top = highlight.dataset.defaultTop; // Trả về vị trí mặc định
-					
-					// Nếu rời khỏi mục khác, khôi phục màu mục mặc định
-					defaultNavButton.style.color = "var(--navbar-dark-primary)";
-				});
-			});
-			
-			function resetColors() {
-				document.querySelectorAll(".nav-button").forEach(button => {
-					button.classList.remove("active");
-					if (button !== defaultNavButton) {
-						button.style.color = "var(--navbar-light-secondary)"; // Đặt lại màu khi không phải mặc định
-					}
-				});
-			}
-		});
-	</script>
+
 </head>
 <body>
 <div id="gene">
@@ -125,7 +80,11 @@
 						.then(blob => {
 							let formData = new FormData();
 							let name = document.getElementById("file_name").textContent;
+							const imgElement = document.getElementById("file_image");
+							const blob2 = dataURLToBlob(imgElement.src);
+							
 							formData.append("audio", blob, name);
+							formData.append("image", blob2, "album_art.jpg");
 							
 							return fetch("/save_vocals", {
 								method: "POST",
@@ -156,9 +115,23 @@
 			})
 			.catch(error => console.error("Error:", error));
 	});
+	
+	function dataURLToBlob(dataURL) {
+		const parts = dataURL.split(",");
+		const mime = parts[0].match(/:(.*?);/)[1];
+		const binary = atob(parts[1]);
+		let len = binary.length;
+		let u8arr = new Uint8Array(len);
+		
+		while (len--) {
+			u8arr[len] = binary.charCodeAt(len);
+		}
+		
+		return new Blob([u8arr], {type: mime});
+	}
 </script>
 <script>
-	document.getElementById("generate_notes").addEventListener("click", function (){
+	document.getElementById("generate_notes").addEventListener("click", function () {
 		document.getElementById("load").style.display = "flex";
 	})
 	
