--- a/templates/sheet_music.html
+++ b/templates/sheet_music.html
@@ -12,9 +12,13 @@
 	<title>MusicXML Sheet</title>
 	<script src="https://cdn.jsdelivr.net/npm/opensheetmusicdisplay@1.9.0/build/opensheetmusicdisplay.min.js"></script>
 	<style>
+		html::-webkit-scrollbar, body::-webkit-scrollbar {
+			display: none;
+		}
+		
 		#sheet_main {
 			width: 100%;
-			padding: 0 0 0 0;
+			padding: 50px 0 0 0;
 		}
 		
 		#osmd-container {
@@ -58,7 +62,7 @@
 
 <script>
 	let edits = document.getElementById("editsheet");
-	let user = {{ session.get('user_id') is not none | lower }} ;
+	let user = {{session.get('user_id')	is	not	none | lower}};
 	if (!user) {
 		edits.style.display = 'none';
 	} else {
